// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`helpers:extensions add property to each item of extensions should add property "extTypeNum" to each item of extensions 1`] = `
Array [
  Object {
    "ext": "adfx",
    "extType": "AO",
    "extTypeNum": 3,
    "firstName": "adfsdf",
    "fullName": "adfsdfxxddxadfx",
    "lastName": "xxddx",
  },
  Object {
    "ext": "",
    "extType": "VirtualUser",
    "extTypeNum": 1,
    "firstName": "rtfgh",
    "fullName": "rtfghsfdf",
    "lastName": "sfdf",
  },
  Object {
    "ext": "adfx",
    "extType": "Dept",
    "extTypeNum": 4,
    "firstName": "dfdf",
    "fullName": "dfdfdfsadfx",
    "lastName": "dfs",
  },
  Object {
    "ext": "adfx",
    "extType": "Dept",
    "extTypeNum": 4,
    "firstName": "dfd",
    "fullName": "dfdadfx",
    "lastName": "",
  },
  Object {
    "ext": "",
    "extType": "VirtualUser",
    "extTypeNum": 1,
    "firstName": "sfwf",
    "fullName": "sfwfffdfg",
    "lastName": "ffdfg",
  },
  Object {
    "ext": "",
    "extType": "DigitalUser",
    "extTypeNum": 0,
    "firstName": "reer",
    "fullName": "reerdfg",
    "lastName": "dfg",
  },
  Object {
    "ext": "adfx",
    "extType": "AO",
    "extTypeNum": 3,
    "firstName": "cvfg",
    "fullName": "cvfghtsadfx",
    "lastName": "hts",
  },
  Object {
    "ext": "adfx",
    "extType": "VirtualUser",
    "extTypeNum": 1,
    "firstName": "bwerew",
    "fullName": "bwerewadfx",
    "lastName": "",
  },
  Object {
    "ext": "adfx",
    "extType": "Dept",
    "extTypeNum": 4,
    "firstName": "weewr",
    "fullName": "weewrderteradfx",
    "lastName": "derter",
  },
]
`;

exports[`helpers:extensions add property to each item of extensions should add property "fullName" to each item of extensions 1`] = `
Array [
  Object {
    "ext": "adfx",
    "extType": "AO",
    "firstName": "adfsdf",
    "fullName": "adfsdfxxddxadfx",
    "lastName": "xxddx",
  },
  Object {
    "ext": "",
    "extType": "VirtualUser",
    "firstName": "rtfgh",
    "fullName": "rtfghsfdf",
    "lastName": "sfdf",
  },
  Object {
    "ext": "adfx",
    "extType": "Dept",
    "firstName": "dfdf",
    "fullName": "dfdfdfsadfx",
    "lastName": "dfs",
  },
  Object {
    "ext": "adfx",
    "extType": "Dept",
    "firstName": "dfd",
    "fullName": "dfdadfx",
    "lastName": "",
  },
  Object {
    "ext": "",
    "extType": "VirtualUser",
    "firstName": "sfwf",
    "fullName": "sfwfffdfg",
    "lastName": "ffdfg",
  },
  Object {
    "ext": "",
    "extType": "DigitalUser",
    "firstName": "reer",
    "fullName": "reerdfg",
    "lastName": "dfg",
  },
  Object {
    "ext": "adfx",
    "extType": "AO",
    "firstName": "cvfg",
    "fullName": "cvfghtsadfx",
    "lastName": "hts",
  },
  Object {
    "ext": "adfx",
    "extType": "VirtualUser",
    "firstName": "bwerew",
    "fullName": "bwerewadfx",
    "lastName": "",
  },
  Object {
    "ext": "adfx",
    "extType": "Dept",
    "firstName": "weewr",
    "fullName": "weewrderteradfx",
    "lastName": "derter",
  },
]
`;

exports[`helpers:extensions get sorted extensions should get extension sorted by a specified key ascend 1`] = `
Array [
  Object {
    "ext": "adfx",
    "extType": "AO",
    "extTypeNum": 3,
    "firstName": "adfsdf",
    "fullName": "adfsdfxxddxadfx",
    "lastName": "xxddx",
  },
  Object {
    "ext": "adfx",
    "extType": "VirtualUser",
    "extTypeNum": 1,
    "firstName": "bwerew",
    "fullName": "bwerewadfx",
    "lastName": "",
  },
  Object {
    "ext": "adfx",
    "extType": "AO",
    "extTypeNum": 3,
    "firstName": "cvfg",
    "fullName": "cvfghtsadfx",
    "lastName": "hts",
  },
  Object {
    "ext": "adfx",
    "extType": "Dept",
    "extTypeNum": 4,
    "firstName": "dfd",
    "fullName": "dfdadfx",
    "lastName": "",
  },
  Object {
    "ext": "adfx",
    "extType": "Dept",
    "extTypeNum": 4,
    "firstName": "dfdf",
    "fullName": "dfdfdfsadfx",
    "lastName": "dfs",
  },
  Object {
    "ext": "",
    "extType": "DigitalUser",
    "extTypeNum": 0,
    "firstName": "reer",
    "fullName": "reerdfg",
    "lastName": "dfg",
  },
  Object {
    "ext": "",
    "extType": "VirtualUser",
    "extTypeNum": 1,
    "firstName": "rtfgh",
    "fullName": "rtfghsfdf",
    "lastName": "sfdf",
  },
  Object {
    "ext": "",
    "extType": "VirtualUser",
    "extTypeNum": 1,
    "firstName": "sfwf",
    "fullName": "sfwfffdfg",
    "lastName": "ffdfg",
  },
  Object {
    "ext": "adfx",
    "extType": "Dept",
    "extTypeNum": 4,
    "firstName": "weewr",
    "fullName": "weewrderteradfx",
    "lastName": "derter",
  },
]
`;

exports[`helpers:extensions get sorted extensions should get extension sorted by a specified key ascend 2`] = `
Array [
  Object {
    "ext": "",
    "extType": "DigitalUser",
    "extTypeNum": 0,
    "firstName": "reer",
    "fullName": "reerdfg",
    "lastName": "dfg",
  },
  Object {
    "ext": "adfx",
    "extType": "VirtualUser",
    "extTypeNum": 1,
    "firstName": "bwerew",
    "fullName": "bwerewadfx",
    "lastName": "",
  },
  Object {
    "ext": "",
    "extType": "VirtualUser",
    "extTypeNum": 1,
    "firstName": "rtfgh",
    "fullName": "rtfghsfdf",
    "lastName": "sfdf",
  },
  Object {
    "ext": "",
    "extType": "VirtualUser",
    "extTypeNum": 1,
    "firstName": "sfwf",
    "fullName": "sfwfffdfg",
    "lastName": "ffdfg",
  },
  Object {
    "ext": "adfx",
    "extType": "AO",
    "extTypeNum": 3,
    "firstName": "adfsdf",
    "fullName": "adfsdfxxddxadfx",
    "lastName": "xxddx",
  },
  Object {
    "ext": "adfx",
    "extType": "AO",
    "extTypeNum": 3,
    "firstName": "cvfg",
    "fullName": "cvfghtsadfx",
    "lastName": "hts",
  },
  Object {
    "ext": "adfx",
    "extType": "Dept",
    "extTypeNum": 4,
    "firstName": "dfd",
    "fullName": "dfdadfx",
    "lastName": "",
  },
  Object {
    "ext": "adfx",
    "extType": "Dept",
    "extTypeNum": 4,
    "firstName": "dfdf",
    "fullName": "dfdfdfsadfx",
    "lastName": "dfs",
  },
  Object {
    "ext": "adfx",
    "extType": "Dept",
    "extTypeNum": 4,
    "firstName": "weewr",
    "fullName": "weewrderteradfx",
    "lastName": "derter",
  },
]
`;

exports[`helpers:extensions get sorted extensions should get extension sorted by a specified key descend 1`] = `
Array [
  Object {
    "ext": "adfx",
    "extType": "Dept",
    "extTypeNum": 4,
    "firstName": "weewr",
    "fullName": "weewrderteradfx",
    "lastName": "derter",
  },
  Object {
    "ext": "",
    "extType": "VirtualUser",
    "extTypeNum": 1,
    "firstName": "sfwf",
    "fullName": "sfwfffdfg",
    "lastName": "ffdfg",
  },
  Object {
    "ext": "",
    "extType": "VirtualUser",
    "extTypeNum": 1,
    "firstName": "rtfgh",
    "fullName": "rtfghsfdf",
    "lastName": "sfdf",
  },
  Object {
    "ext": "",
    "extType": "DigitalUser",
    "extTypeNum": 0,
    "firstName": "reer",
    "fullName": "reerdfg",
    "lastName": "dfg",
  },
  Object {
    "ext": "adfx",
    "extType": "Dept",
    "extTypeNum": 4,
    "firstName": "dfdf",
    "fullName": "dfdfdfsadfx",
    "lastName": "dfs",
  },
  Object {
    "ext": "adfx",
    "extType": "Dept",
    "extTypeNum": 4,
    "firstName": "dfd",
    "fullName": "dfdadfx",
    "lastName": "",
  },
  Object {
    "ext": "adfx",
    "extType": "AO",
    "extTypeNum": 3,
    "firstName": "cvfg",
    "fullName": "cvfghtsadfx",
    "lastName": "hts",
  },
  Object {
    "ext": "adfx",
    "extType": "VirtualUser",
    "extTypeNum": 1,
    "firstName": "bwerew",
    "fullName": "bwerewadfx",
    "lastName": "",
  },
  Object {
    "ext": "adfx",
    "extType": "AO",
    "extTypeNum": 3,
    "firstName": "adfsdf",
    "fullName": "adfsdfxxddxadfx",
    "lastName": "xxddx",
  },
]
`;

exports[`helpers:extensions get sorted extensions should get extension sorted by a specified key descend 2`] = `
Array [
  Object {
    "ext": "adfx",
    "extType": "Dept",
    "extTypeNum": 4,
    "firstName": "weewr",
    "fullName": "weewrderteradfx",
    "lastName": "derter",
  },
  Object {
    "ext": "adfx",
    "extType": "Dept",
    "extTypeNum": 4,
    "firstName": "dfdf",
    "fullName": "dfdfdfsadfx",
    "lastName": "dfs",
  },
  Object {
    "ext": "adfx",
    "extType": "Dept",
    "extTypeNum": 4,
    "firstName": "dfd",
    "fullName": "dfdadfx",
    "lastName": "",
  },
  Object {
    "ext": "adfx",
    "extType": "AO",
    "extTypeNum": 3,
    "firstName": "cvfg",
    "fullName": "cvfghtsadfx",
    "lastName": "hts",
  },
  Object {
    "ext": "adfx",
    "extType": "AO",
    "extTypeNum": 3,
    "firstName": "adfsdf",
    "fullName": "adfsdfxxddxadfx",
    "lastName": "xxddx",
  },
  Object {
    "ext": "",
    "extType": "VirtualUser",
    "extTypeNum": 1,
    "firstName": "sfwf",
    "fullName": "sfwfffdfg",
    "lastName": "ffdfg",
  },
  Object {
    "ext": "",
    "extType": "VirtualUser",
    "extTypeNum": 1,
    "firstName": "rtfgh",
    "fullName": "rtfghsfdf",
    "lastName": "sfdf",
  },
  Object {
    "ext": "adfx",
    "extType": "VirtualUser",
    "extTypeNum": 1,
    "firstName": "bwerew",
    "fullName": "bwerewadfx",
    "lastName": "",
  },
  Object {
    "ext": "",
    "extType": "DigitalUser",
    "extTypeNum": 0,
    "firstName": "reer",
    "fullName": "reerdfg",
    "lastName": "dfg",
  },
]
`;

exports[`helpers:extensions get sorted extensions should get sorted extensions 1`] = `
Array [
  Object {
    "ext": "adfx",
    "extType": "Dept",
    "firstName": "weewr",
    "lastName": "derter",
  },
  Object {
    "ext": "adfx",
    "extType": "Dept",
    "firstName": "dfdf",
    "lastName": "dfs",
  },
  Object {
    "ext": "adfx",
    "extType": "Dept",
    "firstName": "dfd",
    "lastName": "",
  },
  Object {
    "ext": "adfx",
    "extType": "AO",
    "firstName": "cvfg",
    "lastName": "hts",
  },
  Object {
    "ext": "adfx",
    "extType": "AO",
    "firstName": "adfsdf",
    "lastName": "xxddx",
  },
  Object {
    "ext": "",
    "extType": "VirtualUser",
    "firstName": "sfwf",
    "lastName": "ffdfg",
  },
  Object {
    "ext": "",
    "extType": "VirtualUser",
    "firstName": "rtfgh",
    "lastName": "sfdf",
  },
  Object {
    "ext": "adfx",
    "extType": "VirtualUser",
    "firstName": "bwerew",
    "lastName": "",
  },
  Object {
    "ext": "",
    "extType": "DigitalUser",
    "firstName": "reer",
    "lastName": "dfg",
  },
]
`;
